fix: add missing coloring and icon for MS Visio files

--- a/src/assets/css/vars.scss
+++ b/src/assets/css/vars.scss
@@ -6,4 +6,5 @@ $--color-warning: #a06300;
 /* office colors */
 $--powerpoint: #B7472A;
 $--word: #2B579A;
+$--visio: #3956a4;
 $--excel: #217346;
